# FMO-Daily-Stochastic-5-10-EMA

./: EMA5_10_Stoch_SR_EOD.cs  EMA5_10_Stoch_SR_EOD.mq5  EMA5_10_Stoch_SR_Signal.2.mq5  EMA5_10_Stoch_SR_Signal.cs  EMA5_10_Stoch_SR_Signal.mq5  EMA5_10_Stoch_SR_Signal.pine  EOD_Continuation_Full.py  EOD_Simulator.py  Notes.md  TradingView.pinescript5  compare_signals.py  generate_full_pdf.py  generate_single_pdf.py  trading plan.psql
Py/: EOD_Readme.md  README.md  __init__.py  pyproject.toml  setup.py
Py/eod_strategy/: __init__.py  __main__.py  backtest_all.py  compare_logs.py  core_strategy.py  simulator.py
Py/examples/: demo_notebook.ipynb  sample_data.csv
