[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eod-strategy"
version = "0.1.0"
description = "End-of-Day Continuation Strategy in pure Python"
authors = [
  { name="Your Name", email="you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "pandas",
  "numpy",
  "matplotlib"
]

[project.scripts]
eod-strategy = "eod_strategy.eod_continuation:main"
